# benchmark_duckdb

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  experiments.py  experiments_primary_key.py
include/: duckdb_util.hpp
main/: main.cpp
scripts/: experiment_perfect_join.py  experiments_primary_key.py  tpch_q09_bushy.sql
src/: duckdb_util.cpp
